--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fem-advice-generator-react",
   "version": "0.1.0",
+  "homepage": "https://aligjahed.github.io/fem-advice-generator-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
   }
